# deep-research-agent

./: .env.example  .gitignore  README.md  docker-compose.server.yml  findings.md  progress.md  pyproject.toml  task_plan.md
backend/: Dockerfile
backend/app/: analysis.py  evaluation.py  history_store.py  llm.py  main.py  models.py
backend/app/agents/: researcher.py  scope.py  supervisor.py  verifier.py  writer.py
backend/app/graph/: __init__.py  langgraph_workflow.py  runner.py  visualization.py
backend/app/tools/: __init__.py  search.py
backend/data/: research_history.sqlite3
backend/tests/: conftest.py  test_api.py  test_evaluation.py  test_exports.py  test_graph_workflow.py  test_history.py  test_llm.py  test_pipeline.py  test_report_quality.py  test_tools.py
docs/: deep-research-agent-design.md  interview-script.md  project-status-report.md
examples/: demo_tasks.json
frontend/: index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  api.ts  sampleData.ts  styles.css  types.ts
frontend/src/components/: MouseWake.tsx
scripts/: evaluate_demo.py
