[project]
name = "deep-research-agent"
version = "0.1.0"
description = "Chinese-first Deep Research Agent with evidence-grounded LangGraph workflow."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langchain>=0.3.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "requests>=2.32.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
